Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-136436

qdoc doesn't warn about missing alt text for \inlineimage

    XMLWordPrintable

Details

    • d9e450761 (dev), 4b36201ca (dev), 1feef10c6 (6.9)
    • DaVinci 118

    Description

      qdoc generates warnings for missing alt texts for \images. qdoc should also generate these warnings for \inlineimages.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paulwicking Paul Wicking
            andreas.eliasson Andreas Eliasson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes